--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -6,7 +6,7 @@
 <div id="container">
 
 	<div id="main-info-left" class="tone-box">
-	    <p>If you require additional help requesting an item using fILL please visit or contact your local public library.</p>
+	    <p>If you require additional help requesting an item through fILL please visit or contact your local public library.</p>
 			<h3><TMPL_VAR name="library"></h3>
 			<p>Phone: <TMPL_VAR name="phone"></p>
 			<p>Email: <a href='mailto:<TMPL_VAR name="email_address">'><TMPL_VAR name="email_address"></a></p>
