--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -19,28 +19,28 @@
 </ul>
 <hr><br>-->
 <h3>How long does it take to get something delivered?</h3>
-<p>Wait times can vary, but typically, it takes between a week and two weeks for an item to be delivered. Items already on loan may take longer.</p>
+<p>Wait times can vary, but typically it takes between one to two weeks for an item to be delivered. Items already on loan may take longer.</p>
 
 <h3>Where does the requested item come from?</h3>
-<p>The item that you have requested could come from any public library in Manitoba.</p>
+<p>The item that you requested could come from any public library in Manitoba.</p>
 
 <h3>Why can&rsquo;t it just get sent to my home?</h3>
-<p>The great thing about interlibrary loan is that it allows you to access materials from all over the province. The one stipulation is that this is mediated by your local public library, which borrows materials on its own behalf to lend to you.</p>
+<p>Interlibrary loan allows you access to materials from across the province; this process is mediated by your local public library.  Your library borrows the materials and then lends them to you.</p>
 
 <h3>Why is it called fILL?</h3>
 <p>ILL stands for interlibrary loan, and the “f” stands for free and open-source software (FOSS). These days it is called fILL because with the software we are able to easily fill your interlibrary loan request.</p>
 
 <h3>Can I renew my items?</h3>
-<p>You will not be able to renew the item directly. You can make a renewal request through your library, and they will make the request to the lender and notify you. It is the decision of the lending library whether to allow interlibrary loan items to be renewed.</p>
+<p>You will not be able to renew the item directly. You can make a renewal request through your library and they will make the request to the lender and notify you. It is the decision of the lending library whether to allow interlibrary loan items to be renewed.</p>
 
 <h3>How many items can I request?</h3>
 <p>Interlibrary loans count as part of your borrowing from your local public library. The maximum number of items you can take out at one time is up to your library.</p>
 
 <h3>What happens if the item I want is already on loan?</h3>
-<p>Your local library will place a hold on the item, and after it is returned, the ILL request will be processed.</p>
+<p>Your local library will see if another library has it, or will ask the lender to place a hold on it.  If the lender places a hold for your library they will send it when it becomes available (the expected date will show up in your "current borrowing" list).</p>
 
 <h3>Do I pay late fines to my local public library or to the lending library?</h3>
-<p>If your item is late, you will pay late fees to your local public library.</p>
+<p>If your item is late you will pay late fees to your local public library.</p>
 
 
 
