--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -19,30 +19,29 @@
 </ul>
 <hr><br>-->
 <h3>How long does it take to get something delivered?</h3>
-<p>Wait times can vary, but typically, it takes between a week and two weeks for an item to be delivered. Items already on loan may take longer.</p>
+<p>How long does it take to get something delivered?
+Typically it takes between a week and two weeks for an item to be delivered. Every request is unique and items with limited copies and those already on loan may take longer.</p>
 
 <h3>Where does the requested item come from?</h3>
 <p>The item that you have requested could come from any public library in Manitoba.</p>
 
 <h3>Why can&rsquo;t it just get sent to my home?</h3>
-<p>The great thing about interlibrary loan is that it allows you to access materials from all over the province. The one stipulation is that this is mediated by your local public library, which borrows materials on its own behalf to lend to you.</p>
+<p>Interlibrary loan is a transaction between two different library systems; it does not facilitate a loan between a local library patron and another library system directly. Interlibrary loan provides local access to library materials from all over the province and once a requested item arrives from the lending library it will need to be processed and your local library will notify you when it is ready to pick-up.</p>
 
 <h3>Why is it called fILL?</h3>
-<p>ILL stands for interlibrary loan, and the “f” stands for free and open-source software (FOSS). These days it is called fILL because with the software we are able to easily fill your interlibrary loan request.</p>
+<p>ILL stands for interlibrary loan, and the “f” stands for free and open-source software (FOSS). It is also called fILL as it enables your local library to easily fill your interlibrary loan request online.</p>
 
 <h3>Can I renew my items?</h3>
-<p>You will not be able to renew the item directly. You can make a renewal request through your library, and they will make the request to the lender and notify you. It is the decision of the lending library whether to allow interlibrary loan items to be renewed.</p>
+<p>While library patrons are not able to renew the item directly, you can make a renewal request through your local library. Your library staff will make the request to the lending library and notify you of the result. It is the decision of the lending library whether to allow inter-library loan items to be renewed.</p>
 
 <h3>How many items can I request?</h3>
-<p>Interlibrary loans count as part of your borrowing from your local public library. The maximum number of items you can take out at one time is up to your library.</p>
+<p>The maximum number of items you can borrow at one time is a matter of local policy at your library.</p>
 
 <h3>What happens if the item I want is already on loan?</h3>
-<p>Your local library will place a hold on the item, and after it is returned, the ILL request will be processed.</p>
+<p>Your local library can request a hold on the item, after it is returned the ILL request will be processed.</p>
 
 <h3>Do I pay late fines to my local public library or to the lending library?</h3>
-<p>If your item is late, you will pay late fees to your local public library.</p>
-
-
+<p>If your item is late, you will pay late fees to your local public library. Library patrons should always make return any borrowed items by the due date to ensure service is not disrupted for other library patrons.</p>
 
 </div><!--main-info-left-->
 
