--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -197,6 +197,7 @@ nav li a.current_tab {
 
 #search-container {
 	width: 100%;
+	min-width: 480px;
 	display: block;
 }
 
@@ -376,6 +377,7 @@ input[type=text]
     font-size: 1.4em;
     padding-left:10px;
     width: auto;
+    min-width: 480px;
     border: 2px #c3c3c3 solid;
 }
 
