updated faq text

--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -28,7 +28,7 @@
 <p>Interlibrary loan is a transaction between two different library systems; it does not facilitate a loan between a local library patron and another library system directly. Interlibrary loan provides local access to library materials from all over the province and once a requested item arrives from the lending library it will need to be processed and your local library will notify you when it is ready to pick-up.</p>
 
 <h3>Why is it called fILL?</h3>
-<p>ILL stands for interlibrary loan, and the “f” stands for free and open-source software (FOSS). It is also called fILL as it enables your local library to easily fill your interlibrary loan request online.</p>
+<p>ILL stands for interlibrary loan, and the &#34;f&#34; stands for free and open-source software (FOSS). It is also called fILL as it enables your local library to easily fill your interlibrary loan request online.</p>
 
 <h3>Can I renew my items?</h3>
 <p>While library patrons are not able to renew the item directly, you can make a renewal request through your local library. Your library staff will make the request to the lending library and notify you of the result. It is the decision of the lending library whether to allow inter-library loan items to be renewed.</p>
@@ -40,7 +40,7 @@
 <p>Your local library can request a hold on the item, after it is returned the ILL request will be processed.</p>
 
 <h3>Do I pay late fines to my local public library or to the lending library?</h3>
-<p>If your item is late, you will pay late fees to your local public library. Library patrons should always make return any borrowed items by the due date to ensure service is not disrupted for other library patrons.</p>
+<p>If your item is late, you will pay late fees to your local public library. Library patrons should always try to return any borrowed items by the due date to ensure service is not disrupted for other library patrons.</p>
 
 </div><!--main-info-left-->
 
