rename help tutorial

--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -15,18 +15,10 @@
 
 	<p>Here is a tutorial on using fILL to find and request titles from any Manitoba public library:</p>
 
-	<object class="fill-help" data="/Patrons%20-%20Searching%20tutorial.pdf" type="application/pdf" height="900">
-	  alt : <a href="/Patrons%20-%20Searching%20tutorial.pdf">Patrons - Searching tutorial.pdf</a>
+	<object class="fill-help" data="/patrons-searching-tutorial.pdf" type="application/pdf" height="900">
+	  alt : <a href="/patrons-searching-tutorial.pdf">Patrons - Searching tutorial.pdf</a>
 	</object>
-  <p>Or click here to <a href="/Patrons%20-%20Searching%20tutorial.pdf">download PDF</a>[285 KB]</p>
-<!--
-        <p>The fILL help page is designed to help you to better search for the book you want.<br />
-
-           Scroll down the page to locate the information you are looking for or 
-        </p>
-        <h3>Tutorial</h3>
-        <p style="text-decoration:underline;"><strong><a href="/Patrons%20-%20Searching%20tutorial.pdf">View a quick tutorial about using fILL.</a></strong></p>
--->
+  <p>Or click here to <a href="/patrons-searching-tutorial.pdf">download PDF</a>[285 KB]</p>
 
 </div><!--container div-->
 
