--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -4,7 +4,7 @@
 
 <!--[if lt IE 9]>
   <script>
-    var e = ("abbr,article,aside,audio,button,canvas,datalist,details," +
+    var e = ("abbr,article,aside,audio,canvas,datalist,details," +
       "figure,footer,header,main,mark,menu,meter,nav,output," +
       "progress,section,time,video").split(',');
     for (var i = 0; i < e.length; i++) {
