--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -14,6 +14,8 @@
   </script>
 <![endif]-->
 
+<meta name=viewport content="width=device-width, initial-scale=1">
+
 <!-- <link type="text/css" rel="stylesheet" href="/fILL-public.1.0.css"> -->
 <link type="text/css" rel="stylesheet" href="/css/feedstyles.1.1.css">
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
