--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -18,6 +18,8 @@
   </script>
 <![endif]-->
 
+<meta name=viewport content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="/css/fILL-public-accessible.1.1.css"></link>
   <link rel="stylesheet" href="/css/fILL-public-datatables.1.0.css"></link>
   <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
