testing ledgend tag

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -21,12 +21,14 @@ $('document').ready(function(){
           <span class="login-header-title">Log in to fILL</span>
         </div>
         <fieldset name="login">
+        <legend>Login</legend>
           <label for="authen_username">User Name</label>
-          <input type="text" value="" size="20" name="authen_username" tabindex="1" id="authen_loginfield"><br>
+          <input type="text" value="" size="20" name="authen_username" tabindex="1" id="authen_loginfield" /><br>
           <label for="authen_password">Password </label>
-          <input type="password" size="20" name="authen_password" tabindex="2" id="authen_passwordfield"><br>
+          <input type="password" size="20" name="authen_password" tabindex="2" id="authen_passwordfield" /><br>
         </fieldset>
         <fieldset>
+        <legend>Sign in</legend>
           <input type="submit" class="button-left" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
           <input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield"><span>Remember User Name</span><br>
         </fieldset>
