added accessibility to faqs

--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -5,7 +5,7 @@
 </script>
 
 <div id="container">
-<div id="main-info-left" class="tone-box">
+<div id="main-info-left" class="tone-box" role="main">
 <h2>FAQs</h2>
 <!--<ul>
 	<li><a href="#q1"><h3>How long does it take to get something delivered?</h3></a></li>
@@ -44,8 +44,8 @@
 
 </div><!--main-info-left-->
 
-	<div id="aside-img-right">
-		<img src="/img/fill-faq.png"></div>
+	<div id="aside-img-right" role="complimentary">
+		<img src="/img/fill-faq.png" alt="Overlapping question marks"></div>
 	</div>
 
 </div><!--div id container -->
