--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -5,7 +5,7 @@
 </script>
 <div id="container">
 
-	<div id="main-info-left" class="tone-box">
+	<div id="main-info-left" class="tone-box" role="main">
 	    <p>If you require additional help requesting an item through fILL please visit or contact your local public library.</p>
 			<h3><TMPL_VAR name="library"></h3>
 			<p>Phone: <TMPL_VAR name="phone"></p>
@@ -18,7 +18,7 @@
 		</p>
 	</div>
 
-	<div id="aside-img-right">
+	<div id="aside-img-right" role="complimentary">
 		<img src="/img/fill-contact.jpg" alt="Child sitting on a the floor of a book store, engrossed in reading">
 		      <p class="note">Image care of <a href="https://www.flickr.com/photos/48439369@N00/2100913578">Tim Pierce</a></p>
 
