added accessibility to help

--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -10,7 +10,7 @@
       <p class="note">Image care of <a href="https://www.flickr.com/photos/sanjoselibrary/2839834669/">the San Jose Library</a></p>
   </div>
 -->
-
+<div role="main">
 <h2>Help</h2>
 
 	<p>Here is a tutorial on using fILL to find and request titles from any Manitoba public library:</p>
@@ -19,7 +19,7 @@
 	  alt : <a href="/patrons-searching-tutorial.pdf">Patrons - Searching tutorial.pdf</a>
 	</object>
   <p>Or click here to <a href="/patrons-searching-tutorial.pdf">download PDF</a>[285 KB]</p>
-
+</div>
 </div><!--container div-->
 
 <!--
