added accessibility to my account

--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -70,6 +70,7 @@ $('document').ready(function(){
 </style>
 <div class="clear">
   <div id="container">
+  <div role="main">
       <h2>My Account</h2>
       <table id="fill-table">
         <tr><th scope="row">Name</th><td><TMPL_VAR name="name"></td></tr>
@@ -101,6 +102,7 @@ $('document').ready(function(){
         <input id="changePassword" type="submit" value="Change" class="fill-button">
         <input id="cancel" type="button" value="Cancel" class="butlink">
       </form>
+    </div>
     </div>
   </div>
 </div>
