--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -92,7 +92,7 @@ $('document').ready(function(){
 </script>
 
 <div id="container">
-
+<div role="main">
       <div id="middlecontent">
         <div id="waitDiv">
           Loading... <img src="/wait.gif">
@@ -113,6 +113,7 @@ $('document').ready(function(){
         	  </tbody>
         	</table>
       </div>
-  </div>
+</div>
+</div>
 
 <TMPL_INCLUDE NAME="footer.tmpl">
