added accessibility to current

--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -93,7 +93,8 @@ $('document').ready(function(){
 
 <div id="container">
 
-      
+<div role="main">
+      <div id="middlecontent">
         <div id="waitDiv">
           Loading... <img src="/wait.gif">
         </div>
@@ -112,7 +113,8 @@ $('document').ready(function(){
         	  <tbody>
         	  </tbody>
         	</table>
-
-  </div>
+	</div>
+</div>
+</div>
 
 <TMPL_INCLUDE NAME="footer.tmpl">
