media query cont 2
fixed issue with search container and min width of 480px

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -72,7 +72,7 @@ h3 {
 	padding: ;
 	width: 90%;
 	height: auto;
-	min-width: 480px;
+	
 	clear: both;  /* start fresh with floatiness within the container */
 }
 
@@ -144,7 +144,7 @@ nav
 	float: left;
 	width: 100%;
 	margin: .5em 0em;
-	min-width: 480px;
+	
 	font-size: 1.4em;
 	border-bottom: #06a0ca solid 5px;
 }
@@ -209,7 +209,7 @@ nav li a.current_tab {
 
 #search-container {
 	width: 100%;
-	min-width: 480px;
+	
 	display: block;
 }
 
@@ -219,7 +219,7 @@ nav li a.current_tab {
 	width: 100%;
 	height: ;
 	display: inline;
-  	min-width: 480px;
+  	
   	margin-bottom: 1.2em;
   	vertical-align: middle;
   	text-align: center;
@@ -281,7 +281,7 @@ nav li a.current_tab {
 	margin-bottom: 1em;
 	display: inline;
   	padding: 1.25em; 
-  	min-width: 480px;
+  	
 }
 
 #main-info-right
@@ -291,7 +291,7 @@ nav li a.current_tab {
 	margin-bottom: 1em;
 	display: inline;
   	padding: 1.25em; 
-  	min-width: 480px;
+  	
 }
 
 #aside-img-welcome {
@@ -392,7 +392,7 @@ input[type=text]
     font-size: 1.4em;
     padding-left:10px;
     width: auto;
-    min-width: 480px;
+    
     border: 2px #c3c3c3 solid;
 }
 
@@ -405,7 +405,7 @@ input[type=password]
     font-size: 1.4em;
     padding-left:10px;
     width: auto;
-    min-width: 480px;
+    
     border: 2px #c3c3c3 solid;
 }
 
@@ -645,7 +645,7 @@ div.termtitle {
 
 .fill-help {
 	width: 100%;
-	min-width: 480px;
+	
 	margin: auto;
 }
 
@@ -849,6 +849,11 @@ input[type=text]
     padding-left:10px;
     width: 80%;
     border: 2px #c3c3c3 solid;
+}
+
+#search-container {
+	width: 100%;
+	display: block;
 }
 
 #main
