patrons can delete "declined" messages that they have seen

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -107,7 +107,7 @@
       -->
           <div id="username"><TMPL_VAR name="username"></div>
           <p><TMPL_VAR name="library"></p>
-          <p style="display:none"><TMPL_VAR name="lid"></p>
+          <div id="lid" style="display:none"><TMPL_VAR name="lid"></div>
       </div>
     </div>
 
