--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -836,8 +836,10 @@ button {
 
 nav li a
 {
-	margin: .5em;
+	margin: .3em;
 	display: block;
+	font-size: 1.2em;
+	font-weight: bold;
 	float: left;
 	padding: 5px 10px;
 	text-decoration: none;
@@ -869,6 +871,7 @@ input[type=text]
 
 #main
 {
+	float: none;
 	display: block;
 	width: 100%; 
   	padding: 1.25em; 
