small changes to media query

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -811,9 +811,9 @@ image courtesy of http://www.famfamfam.com/lab/icons/silk/
 /*------------------------------------------------------*/
 /*Mobile styles. The site is generally responsive, however not great on smaller phone screen. These styles will address this*/
 
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) 
+@media screen 
+and (min-width : 320px) 
+and (max-width : 480px) 
 
 {
 
