--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -812,8 +812,8 @@ image courtesy of http://www.famfamfam.com/lab/icons/silk/
 /*Mobile styles. The site is generally responsive, however not great on smaller phone screen. These styles will address this*/
 
 @media screen 
-and (min-width : 25em;) 
-and (max-width : 45em;) 
+and (min-width : 25em) 
+and (max-width : 45em) 
 
 {
 
