--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -5,7 +5,7 @@
     <tr>
       <td style="width:15%"> </td>
       <td style="width:55%; vertical-align:top;">
-	<h1>Welcome!</h1>
+	<h1>Welcome User!</h1>
 	<br />
 	<p>This is the Manitoba public libraries' Z39.50 spray search and interlibrary loan requesting system.</p>
 	<br />
