added new css and logo and container

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -6,7 +6,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><TMPL_VAR name="pagetitle"></title>
-  <link type="text/css" rel="stylesheet" href="/css/fILL.1.0.css">
+  <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
   <link type="text/css" rel="stylesheet" href="/css/feedstyles.1.1.css">
   <link type="text/css" rel="stylesheet" href="/css/fILL-chill/jquery-ui-1.8.16.custom.css"/>
   <link type="text/css" rel="stylesheet" href="/plugins/DataTables-1.8.2/media/css/demo_page.css">
@@ -85,11 +85,15 @@ $('document').ready(function(){
 </script>
 
 </head>
+<!--Library Client side fILL-->
+
+<div id="container">
+
 <body class="example_alt_pagination" onload="domReady();">
 
 <DIV id="header">
   <div id="logo">
-    <img src="/img/fILL.png" class="fill-logo" alt="f i l l free open source software interlibrary loan management system">
+    <img src="/img/fill-logo.png" class="fill-logo" alt="f i l l free open source software interlibrary loan management system">
     <div id="logo_slogan">Manitoba Public Libraries ILL management system</div>
   </div>
 
@@ -172,6 +176,6 @@ $('document').ready(function(){
 
 
   </ul>
-
+  </div>
 </div>
 
