added new ids to css

--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -2,7 +2,19 @@
 
 /***---Start of new library client side CSS--**/
 
+#main-left {
+	width: 48%;
+	margin: auto;
+	float: left;
+	display: inline;
+}
 
+#main-right {
+	width: 48%;
+	margin: auto;
+	float: left;
+	display: inline;
+}
 
 
 /***---End of new library client side CSS--**/
