fixed main tag in welcome

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -33,7 +33,7 @@
 	
 	<p>Information for you:</p>
 	<p style="text-decoration : underline;"><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p>
-</div>
+</main>
 
 <div id="main-right" class="tone-box" role="complimentary">
 
