nag changes and main welcome

--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -3,15 +3,15 @@
 /***---Start of new library client side CSS--**/
 
 #main-left {
-	width: 45%;
-
+	width: 48%;
+	padding: 1em;
 	float: left;
 	display: inline;
 }
 
 #main-right {
-	width: 45%;
-
+	width: 48%;
+	padding: 1em;
 	float: right;
 	display: inline;
 }
