--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -119,8 +119,8 @@ $('document').ready(function(){
 </div><!--Div id header-->
 
 <!-- div id="nav1" -->
-<div id="csstabs">
-  <ul>
+<nav role="navigation">
+  <ul class="nav inline-items">
     <li id="menu_borrow">
       <a href="/cgi-bin/lightning.cgi?rm=lightning_search_form">
       Borrowing from other libraries
@@ -174,10 +174,8 @@ $('document').ready(function(){
       Rotations Admin
       </a>
     </li>
-
-
   </ul>
-</div>
+</nav>
 
 </div><!--container div-->
 <!-- Begin content -->
