new header link new welcome sizes

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -93,7 +93,7 @@ $('document').ready(function(){
 
 <div id="header">
     <div id="header-left">
-      <div id="fill-logo"><a href="/"><img src="/img/fill-logo.png" alt="fill"></a></div>
+      <div id="fill-logo"><a href="/cgi-bin/info.cgi?rm=welcome"><img src="/img/fill-logo.png" alt="fill"></a></div>
       <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
     </div>
 
@@ -118,7 +118,7 @@ $('document').ready(function(){
 
 </div><!--Div id header-->
 
-<!-- div id="nav1" -->
+
 <nav role="navigation">
   <ul class="nav inline-items">
     <li id="menu_borrow">
